--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-PORT		= 5000
-DB_HOST		= localhost
-DB_USER		= root
-DB_PASSWORD	=
-DB_DATABASE	= a_note
+PORT		= 5000 
+DB_HOST		= remotemysql.com
+DB_USER		= fzlAewyJCd
+DB_PASSWORD	= nUI0gafB32
+DB_DATABASE	= fzlAewyJCd
